--- a/package.json
+++ b/package.json
@@ -1,27 +1,25 @@
 {
-  "name": "array-operation",
+  "name": "ajx",
   "version": "1.0.0",
-  "description": "",
-  "main": "",
+  "description": "## Zadanie rozwiązywane z wykładowcą",
+  "main": "webpack.config.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "wp": "./node_modules/.bin/webpack",
-    "server": "./node_modules/.bin/webpack-dev-server --inline --hot"
+    "wp": "./node_modules/.bin/webpack"
   },
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "react": "^15.4.0",
+    "react-dom": "^15.4.0"
+  },
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
-    "css-loader": "^0.28.7",
-    "node-sass": "^4.5.3",
-    "sass-loader": "^6.0.6",
-    "style-loader": "^0.19.0",
-    "webpack": "^3.8.1",
-    "webpack-dev-server": "^2.9.3"
-  },
-  "dependencies": {
-    "html-to-react": "^1.3.1"
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "i": "^0.3.6",
+    "webpack": "^3.8.1"
   }
 }
