--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ajx",
   "version": "1.0.0",
-  "description": "## Zadanie rozwiązywane z wykładowcą",
+  "description": "package-gallows",
   "main": "webpack.config.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
